# Smart-Monitoring-System-for-Vertical-Farming

./: README.md
3DModels/Main MCU and Display Enclosure/: Box Cover.stl  Box.stl
3DModels/SoilMoistureSesnor/Sensor Node Housing/: Bottom.stl  Light.stl  Top.stl
3DModels/SoilMoistureSesnor/Soil Moisture Sensor Case/: Bottom.stl  Top.stl
ESP32/ESP32 Display/: .cproject  sdkconfig  sdkconfig.old  tool_set_config.json
ESP32/ESP32 Display/.metadata/: version.ini
ESP32/ESP32 Display/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
ESP32/ESP32 Display/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
ESP32/ESP32 Display/components/espressif__esp_jpeg-v1.0.2/: idf_component.yml
ESP32/ESP32 Display/main/: CMakeLists.txt
ESP32/ESP32 Display/main/GUI/: gui.c  gui.h
ESP32/ESP32 Display/main/GUI/Font/: font_MontserratBold16.c  font_MontserratBold28.c  font_MontserratBold32.c  font_MontserratBold50.c  font_MontserratMedium14.c
ESP32/ESP32 Display/main/GUI/Images/: img_analyticsimage_png.c  img_humidityimage_png.c  img_location_png.c  img_logo_png.c  img_planthealthimage_png.c  img_settingsimage_png.c  img_soilmoistureimage_png.c  img_sunnyimage_png.c  img_tempimage_png.c
ESP32/ESP32 Display/main/Inc/: lcd.h  lvglInit.h  main.h  touch.h
ESP32/ESP32 Display/main/Src/: lcd.c  lvglInit.c  main.c  touch.c
ESP32/ESP32EdgeDeviceAI/: .cproject  .project  CMakeLists.txt  sdkconfig  sdkconfig.old
ESP32/ESP32EdgeDeviceAI/main/: CMakeLists.txt  main.cpp  wifi.c  wifi.h
ESP32/ESP32EdgeDeviceAI/model-parameters/: model_metadata.h  model_variables.h
ESP32/ESP32EdgeDeviceAI/tflite-model/: tflite_learn_8_compiled.cpp  tflite_learn_8_compiled.h
Nordic/SoilMoistureSensor/: CMakeLists.txt  prj.conf
Nordic/SoilMoistureSensor/src/: main.c  mySensorService.c  mySensorService.h
Nordic/TemperatureSensor/: CMakeLists.txt  prj.conf
Nordic/TemperatureSensor/src/: main.c  mySensorService.c  mySensorService.h
(+4 files in other folders)
