idf_component_register(SRCS "Src/main.c" 
							"Src/lvgl_demo_ui.c" 
							"Src/lcd.c" 
							"Src/lvglInit.c" 
							"Src/touch.c" 
							"GUI/gui.c" 
							"GUI/Font/font_MontserratBold16.c" 
							"GUI/Font/font_MontserratBold32.c" 
							"GUI/Font/font_MontserratBold28.c" 
							"GUI/Font/font_MontserratBold50.c" 
							"GUI/Font/font_MontserratMedium14.c" 
							"GUI/Images/img_analyticsimage_png.c" 
							"GUI/Images/img_humidityimage_png.c" 
							"GUI/Images/img_location_png.c" 
							"GUI/Images/img_logo_png.c" 
							"GUI/Images/img_planthealthimage_png.c" 
							"GUI/Images/img_settingsimage_png.c" 
							"GUI/Images/img_soilmoistureimage_png.c" 
							"GUI/Images/img_sunnyimage_png.c" 
							"GUI/Images/img_tempimage_png.c" 
                       INCLUDE_DIRS "Inc/." "GUI/.")
